rust/windows_module/errors_3.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error: cannot find macro `warn` in this scope
  --> windows_module/src/main/windows_support.rs:92:13
   |
92 | ...   warn!("Failove...
   |       ^^^^
   |
   = note: `warn` is in scope, but it is an attribute: `#[warn]`
help: consider importing this macro
   |
 3 + use tracing::warn;
   |

error: cannot find macro `dynasm` in this scope
   --> windows_module/src/jit/windows_compiler.rs:135:9
    |
135 |         dynasm!(ops
    |         ^^^^^^
    |
    = note: `dynasm` is in scope, but it is a crate, not a macro
help: consider importing this macro
    |
  3 + use dynasm::dynasm;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dynasmrt`
   --> windows_module/src/jit/windows_compiler.rs:133:23
    |
133 | ... = dynasmrt::x64...
    |       ^^^^^^^^ use of unresolved module or unlinked crate `dynasmrt`
    |
help: there is a crate or module with a similar name
    |
133 -         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e| JitError::CompilationError(e.to_string()))?;
133 +         let mut ops = dynasm::x64::Assembler::new().map_err(|e| JitError::CompilationError(e.to_string()))?;
    |

warning: found module declaration for main.rs
 --> windows_module/src/lib.rs:3:1
  |
3 | pub mod main;
  | ^^^^^^^^^^^^^
  |
  = note: a binary crate cannot be used as library
  = note: `#[warn(special_module_name)]` on by default

warning: unused import: `info`
  --> windows_module/src/main/windows_main.rs:11:15
   |
11 | ...ing::{info, error};
   |          ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `is_connected` found for struct `Arc<...>` in the current scope
  --> windows_module/src/executor/windows_gpu_context.rs:34:26
   |
34 | ...gr.is_connected() {
   |       ^^^^^^^^^^^^ method not found in `Arc<...>`
   |
   = note: the full name for the type has been written to '/root/aios/rust/target/debug/deps/windows_module-8c424d4a1e4a1c8d.long-type-15663582371707348412.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
   --> windows_module/src/jit/windows_compiler.rs:133:64
    |
133 | ...r(|e| JitError::CompilationError(e.to...
    |       ^                             - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
133 |         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e: /* Type */| JitError::CompilationError(e.to_string()))?;
    |                                                                 ++++++++++++

error[E0596]: cannot borrow data in an `Arc` as mutable
  --> windows_module/src/main/windows_main.rs:78:9
   |
78 | ...   self.local_failover.ha...
   |       ^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Arc<WindowsLocalFailover>`

error[E0596]: cannot borrow data in an `Arc` as mutable
  --> windows_module/src/main/windows_main.rs:82:9
   |
82 | ...   self.local_failover
   |       ^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Arc<WindowsLocalFailover>`

Some errors have detailed explanations: E0282, E0433, E0596, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `windows_module` (lib) generated 2 warnings
error: could not compile `windows_module` (lib) due to 7 previous errors; 2 warnings emitted
